--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../stylesheets/index.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -12,7 +13,7 @@
     <nav>
         <div class="menu">
             <div class="logo">
-                <a href="/">Brand</a>
+                <a href="/">Luna: AstroTools</a>
             </div>
             <ul>
                 <li><a href="/login">Log In</a></li>
