--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
     <nav>
       <div class="menu">
         <div class="logo">
-          <a href="/">Brand</a>
+          <a href="/">Luna: AstroTools</a>
         </div>
         <ul>
           <li><a href="/login">Log In</a></li>
