--- a/public/stylesheets/m-process.css
+++ b/public/stylesheets/m-process.css
@@ -276,6 +276,35 @@ fieldset {
   padding: 10px;
   flex: 25%;
 }
+.demo-container {
+  width: 300px;
+  margin: auto;
+  visibility: hidden;
+}
+.progress-bar {
+ height: 4px;
+ background-color: rgba(5, 114, 206, 0.2);
+ width: 100%;
+ overflow: hidden;
+}
+.progress-bar-value {
+ width: 100%;
+ height: 100%;
+ background-color: rgb(5, 114, 206);
+ animation: indeterminateAnimation 1s infinite linear;
+ transform-origin: 0% 50%;
+}
+@keyframes indeterminateAnimation {
+ 0% {
+  transform:  translateX(0) scaleX(0);
+ }
+ 40% {
+  transform:  translateX(0) scaleX(0.4);
+ }
+ 100% {
+   transform:  translateX(100%) scaleX(0.5);
+ }
+}
 @media (max-width: 420px) {
   .sidebar li .tooltip{
     display: none;
