--- a/public/stylesheets/preview.css
+++ b/public/stylesheets/preview.css
@@ -243,27 +243,12 @@
   font-weight: 500;
   margin: 18px
 }
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 18px;
-  text-align: left;
-}
-.flex-item {
-  background-color: #202020;
-  color: white;
-  padding: 10px;
-  flex: 25%;
-}
-img{
-  width: 200px;
-  height: auto
+img {
+  max-width: 100%;
+  height: auto;
 }
 @media (max-width: 420px) {
-  .sidebar li .tooltip{
+  .sidebar li .tooltip img{
     display: none;
-  }
-  .flex-container {
-    flex-direction: column;
   }
 }
