update html & css

--- a/views/a-process.ejs
+++ b/views/a-process.ejs
@@ -141,6 +141,19 @@
             </fieldset>    
           </div>
           <div class="flex-item-4">
+            <p>Astronomical object photographed:</p>
+            <fieldset>
+              <select name="object" id="object">
+                <option value="star_clusters">Star Clusters</option>
+                <option value="nebulae">Nebulae</option>
+                <option value="galaxies">Galaxies</option>
+                <option value="comet">Comet</option>
+                <option value="planet">Planet</option>
+                <option value="moon">Moon</option>
+                <option value="star">Star</option>
+              </select>
+            </fieldset> 
+            <br>
             <p>Choose an album:</p>
               <div class="row">
                 <fieldset id="album">
