--- a/public/stylesheets/processed.css
+++ b/public/stylesheets/processed.css
@@ -246,14 +246,30 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  font-size: 18px;
   text-align: left;
 }
 .flex-item {
-  background-color: #202020;
   color: white;
   padding: 10px;
   flex: 25%;
+}
+.button {
+  height: 30px;
+  width: 120px;
+  border-radius: 5px;
+  border: none;
+  margin: 5px;
+  border: 2px solid white;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 0 10px;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+}
+.button:hover {
+  background: black;
+  color: white;
 }
 img{
   width: 200px;
