--- a/public/stylesheets/upload.css
+++ b/public/stylesheets/upload.css
@@ -257,6 +257,23 @@ fieldset {
 .thumbnail {
  max-width: 25%;
 }
+.button {
+  height: 28px;
+  width: 80px;
+  border-radius: 5px;
+  border: none;
+  margin: 5px;
+  border: 2px solid white;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+}
+.button:hover {
+  background: black;
+  color: white;
+}
 @media (max-width: 420px) {
   .sidebar li .tooltip{
     display: none;
