--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../stylesheets/index.css">
+    <link rel="stylesheet" href="../stylesheets/about.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,12 +26,8 @@
     </nav>
     <div class="img"></div>
     <div class="center">
-        <div class="title">The Modern Platform for the Astrophotographer.</div>
-        <div class="sub_title">Process your astronomical photographs quickly and easily.</div>
-        <div class="btns">
-            <button onclick="location.href='/about'">Learn More</button>
-            <button onclick="location.href='/users'">Sign Up</button>
-        </div>
+        <div class="title">knaisn[aiosnd[bknas[dlbnas</div>
+        <div class="sub_title">kdnwpinvoisndvonaskvnasjn askdvnasjkdvnapjks dv skndvaplsnaplskn asdlkna[slkbna[slkbna asknba[lsknb[alsnb asblkna[lsbkn</div>
     </div>
 </body>
 
