--- a/views/m-process.ejs
+++ b/views/m-process.ejs
@@ -349,6 +349,7 @@
         </div>
       </form>
       <div class="demo-container">
+        <h5>Please Wait...</h5>
         <div class="progress-bar">
           <div class="progress-bar-value"></div>
         </div>
