--- a/views/a-process.ejs
+++ b/views/a-process.ejs
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Automatic Process </title>
+    <title>Upload</title>
     <link rel="stylesheet" href="../stylesheets/a-process.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,148 +75,42 @@
   <section class="home-section">
     <div class="text">Automatic Process</div>
     <p>
-      <form action="/m-process/m-exec" method="POST">
-        <div class="flex-container">
-          <div class="flex-item-1">
-            <p>Use a Base Frame:</p>
-            <fieldset id="baseFrame">
-              <input type="radio" value="True" name="baseFrame">
-              <label for="baseFrame">True</label>
-              <input type="radio" value="False" name="baseFrame" checked>
-              <label for="baseFrame">False</label>
-              <input type="text" id="baseName" name="baseName" value="null" placeholder="Photo Name">
-            </fieldset>
+    <div class="drop-area" id="drop">
+        <form action="/a-process/a-next" method="POST">
             <br>
-            <p>Use a Dark Frame:</p>
-            <fieldset id="darkFrame">
-              <input type="radio" value="True" name="darkFrame">
-              <label for="darkFrame">True</label>
-              <input type="radio" value="False" name=darkFrame checked>
-              <label for="darkFrame">False</label>
-              <input type="text" id="darkName" name="darkName" value="null" placeholder="Dark Frame Name">
-            </fieldset>
-          </div>
-          <div class="flex-item-2">
-            <p>Use a Flat Frame:</p>
-            <fieldset id="flatFrame">
-              <input type="radio" value="True" name="flatFrame">
-              <label for="flatFrame">True</label>
-              <input type="radio" value="False" name="flatFrame" checked>
-              <label for="flatFrame">False</label>
-              <input type="text" id="flatName" name="flatName" value="null" placeholder="Flat Frame Name">
-            </fieldset>
-            <br>
-            <p>Use a Mask Frame:</p>
-            <fieldset id="maskFrame">
-              <input type="radio" value="True" name="maskFrame">
-              <label for="maskFrame">True</label>
-              <input type="radio" value="False" name="maskFrame" checked>
-              <label for="maskFrame">False</label>
-              <input type="text" id="maskName" name="maskName" value="null" placeholder="Mask Frame Name">
-            </fieldset>
-            <br>
-            <p>Output Name:</p>
-            <fieldset id="outputName">
-              <input type="text" name="outputName" value="My-Processed-Photo" placeholder="My-Processed-Photo">
-            </fieldset>
-            <br>
-            <p>Image Format</p>
+            <p>Please select the album to process:</p>
             <fieldset>
-              <select name="imageFormat" id="imageFormat">
-                <option value=".tiff" selected>TIFF</option>
-                <option value=".jpg">JPG</option>
-                <option value=".png" >PNG</option>
-              </select>
+                <select name="chooseAlbum" id="choosetAlbum">
+                    <% if(folders){ %>
+                        <% for(var folder of folders) { %>
+                            <option value="<%=folder%>"><%=folder%></option>
+                        <% } %>
+                    <% }else { %>
+                        <p class="card card-body text-center display-4 my-4" style="color:aliceblue">No album</p>
+                    <% } %>
+                </select>
             </fieldset>
-            <p>Color Space</p>
+            <br>
+            <p>Please select the astronomical object photographed:</p>
             <fieldset>
-              <select name="colorSpace" id="colorSpace">
-                <option value="2">Adobe</option>
-                <option value="4">ProPhoto</option>
-                <option value="3">Wide</option>
-                <option value="5">XYZ</option>
-                <option value="0">raw</option>
-                <option value="1" selected>sRGB</option>
-              </select>
-            </fieldset>    
-          </div>
-          <div class="flex-item-4">
-            <p>Astronomical object photographed:</p>
-            <fieldset>
-              <select name="object" id="object">
-                <option value="star_clusters">Star Clusters</option>
-                <option value="nebulae">Nebulae</option>
-                <option value="galaxies">Galaxies</option>
-                <option value="comet">Comet</option>
-                <option value="planet">Planet</option>
-                <option value="moon">Moon</option>
-                <option value="star">Star</option>
-              </select>
+                <select name="category" id="category">
+                    <option value="star_clusters">Star Clusters</option>
+                    <option value="nebulae">Nebulae</option>
+                    <option value="galaxies">Galaxies</option>
+                    <option value="comet">Comet</option>
+                    <option value="planet">Planet</option>
+                    <option value="moon">Moon</option>
+                    <option value="star">Star</option>
+                </select>
             </fieldset> 
             <br>
-            <p>Choose an album:</p>
-              <div class="row">
-                <fieldset id="album">
-                  <% if(folders){ %>
-                    <% for(var folder of folders) { %>
-                      <div class="col-sm card card-body m-3  col-md-2">
-                        <input type="radio" value="<%=folder%>" name="album">     
-                        <label for="album"><%= folder %></label>
-                      </div>                   
-                    <% } %>     
-                  <% }else { %>
-                    <p class="card card-body text-center display-4 my-4" style="color:aliceblue">No album</p>
-                  <% } %>
-                </fieldset>
-              </div>
-            <button type="submit" >Process</button>
-          </div> 
-        </div>
-      </form>
+            <button type="submit">Next</button>
+        </form>
+    </div> 
     </p>
   </section>
   
   <script src="../javascripts/left_bar.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script>
-    $('input[name="baseFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#baseName').show();
-      } else {
-        $('#baseName').hide();
-      }
-    })
-    $('#baseName').hide();
-  </script>
-  <script>
-    $('input[name="darkFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#darkName').show();
-      } else {
-        $('#darkName').hide();
-      }
-    })
-    $('#darkName').hide();
-  </script>
-  <script>
-    $('input[name="flatFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#flatName').show();
-      } else {
-        $('#flatName').hide();
-      }
-    })
-    $('#flatName').hide();
-  </script>
-  <script>
-    $('input[name="maskFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#maskName').show();
-      } else {
-        $('#maskName').hide();
-      }
-    })
-    $('#maskName').hide();
-  </script>
+  
 </body>
 </html>
